# rabotest

./: .gitignore  README.md  eval_local.jsonl  eval_localobj.jsonl  global_graph.pkl  main.py  p2prag.ipynb  pyproject.toml  sbatch.sh  sbatch2.sh  test.ipynb
bpaths_d3/: predicted_paths_constrained_global.jsonl  predicted_paths_constrained_local.jsonl  predicted_paths_unconstrained_local.jsonl
eval/: eval_answers.py  eval_judge.py  eval_paths.py  generate_eval_dataset.py  generate_eval_dataset_v2.py  generate_eval_dataset_v3.py  generate_predicted_paths.py  metrics.py  run_eval_v2.py  run_evaluation.py  run_evaluation_v3.py
eval2/: eval_answers.py  eval_paths.py  metrics.py
final_results/results_answers_d3/: answers.jsonl  results_table.csv  results_table.tex
gcr/: event.py  gcr.py  gcr2.py  logit_processor.py  processors.py  processors2.py  trie.py
graphrag/: graphrag.py
rag/: p2prag.py  rag.py
rerank/: pathrerankerdataset.py  pathrerankergnn.py  reranker.py  train.py
results/: predicted_paths_constrained.jsonl  predicted_paths_unconstrained.jsonl
results_paths_d3/: path_results_table.csv  path_results_table.tex
results_paths_d5/: path_results_table.csv  path_results_table.tex
results_paths_d7/: path_answers.jsonl  path_results_table.csv  path_results_table.tex
results_testing_d3/: answers.jsonl  results_table.tex
results_testing_d7/: answers.jsonl  results_table.csv
results_testing_prompt_d7/: answers.jsonl
utils/: download_files.py  generate_eval_dataset.py  graph_utils.py  graph_utils2.py  ner.py  preprocess.py  preprocess_pm4py.py
(+32 files in other folders)
