[project]
name = "rabotest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.24",
    "langchain-huggingface>=1.2.1",
    "llama-index>=0.14.19",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "pm4py>=2.7.22",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
]
